--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <h2>Ảnh Như Ys</h2>
 <p>Cập nhật 09.11.2025</p>
   
-<img id="myImg" src="img_snow.jpg" alt="Snow" style="width:100%;max-width:300px">
+<img id="myImg" src="img_snow.png" alt="Snow" style="width:100%;max-width:300px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
